Translations Updates - ca es gl id it pt_PT zh_CN
(Old svn revision: 29526)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-02-20  Maximilian Schleiss <maximilian@xfce.org>
+
+	* gl.po: Galician translation update (Leandro Regueiro)
+	* it.po: Italian translation udpate (Fabio Riga)
+	* zh_CN: Simplified Chinese translation update (Chris K. Zhang)
+
 2009-02-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Polish translation update (Piotr Sokół)
