--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,15 +4,15 @@
 # Carlos Z.F. Liu <carlos_liu@yahoo.com>, 2004.
 # Jick Nan <jick.nan@gmail.com>, 2006.
 # Hunt Xu <huntxu@live.cn>,2008.
-#
+# Chris K. Zhang <plutino@gmail.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2008-12-17 02:23+0800\n"
-"Last-Translator: Hunt Xu <huntxu@live.cn>\n"
-"Language-Team: Simplified Chinese <i18n-translation@lists.linux.net.cn>\n"
+"PO-Revision-Date: 2009-02-11 00:10-0800\n"
+"Last-Translator: Chris K. Zhang <plutino@gmail.com>\n"
+"Language-Team: Simplified Chinese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -30,11 +30,11 @@ msgstr "无法将编码转换到“%s”"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
-msgstr "无法打开到程序的管道"
+msgstr "无法打开处理管道"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
-msgstr "一个 Xfce 的文本编辑器"
+msgstr "Xfce 文本编辑器"
 
 #: ../src/dialog.c:135
 #, c-format
@@ -59,35 +59,35 @@ msgstr "/文件(_F)"
 
 #: ../src/menu.c:63
 msgid "/File/_New"
-msgstr "/文件(F)/新建(_N)"
+msgstr "/文件/新建(_N)"
 
 #: ../src/menu.c:66
 msgid "/File/New _Window"
-msgstr "/文件(F)/新建(_W)"
+msgstr "/文件/新开窗口(_W)"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
-msgstr "/文件(F)/打开(_O)..."
+msgstr "/文件/打开(_O)..."
 
 #: ../src/menu.c:72
 msgid "/File/Open _Recent"
-msgstr "/文件(F)/打开最近使用的文档(_R)"
+msgstr "/文件/打开最近使用的文档(_R)"
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
-msgstr "/文件(F)/保存(_S)"
+msgstr "/文件/保存(_S)"
 
 #: ../src/menu.c:79
 msgid "/File/Save _As..."
-msgstr "/文件(F)/另存为(_A)..."
+msgstr "/文件/另存为(_A)..."
 
 #: ../src/menu.c:83
 msgid "/File/_Print..."
-msgstr "/文件(F)/打印(_P)..."
+msgstr "/文件/打印(_P)..."
 
 #: ../src/menu.c:87
 msgid "/File/_Quit"
-msgstr "/文件(F)/退出(_Q)"
+msgstr "/文件/退出(_Q)"
 
 #: ../src/menu.c:89
 msgid "/_Edit"
@@ -95,31 +95,31 @@ msgstr "/编辑(_E)"
 
 #: ../src/menu.c:91
 msgid "/Edit/_Undo"
-msgstr "/编辑(E)/撤销(_U)"
+msgstr "/编辑/撤销(_U)"
 
 #: ../src/menu.c:93
 msgid "/Edit/_Redo"
-msgstr "/编辑(E)/重复(_R)"
+msgstr "/编辑/重复(_R)"
 
 #: ../src/menu.c:97
 msgid "/Edit/Cu_t"
-msgstr "/编辑(E)/剪切(_T)"
+msgstr "/编辑/剪切(_T)"
 
 #: ../src/menu.c:99
 msgid "/Edit/_Copy"
-msgstr "/编辑(E)/复制(_C)"
+msgstr "/编辑/复制(_C)"
 
 #: ../src/menu.c:101
 msgid "/Edit/_Paste"
-msgstr "/编辑(E)/粘贴(_P)"
+msgstr "/编辑/粘贴(_P)"
 
 #: ../src/menu.c:103
 msgid "/Edit/_Delete"
-msgstr "/编辑(E)/删除(_D)"
+msgstr "/编辑/删除(_D)"
 
 #: ../src/menu.c:107
 msgid "/Edit/Select _All"
-msgstr "/编辑(E)/选择全部(_A)"
+msgstr "/编辑/全选(_A)"
 
 #: ../src/menu.c:109
 msgid "/_Search"
@@ -127,15 +127,15 @@ msgstr "/搜索(_S)"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/搜索(S)/查找(_F)..."
+msgstr "/搜索/查找(_F)..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/搜索(S)/查找下一个(_N)"
+msgstr "/搜索/查找下一个(_N)"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/搜索(S)/查找上一个(_P)"
+msgstr "/搜索/查找上一个(_P)"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
@@ -143,7 +143,7 @@ msgstr "/搜索/替换(_R)..."
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
-msgstr "/搜索(S)/跳转到(_J)..."
+msgstr "/搜索/跳转到(_J)..."
 
 #: ../src/menu.c:123
 msgid "/_Options"
@@ -151,19 +151,19 @@ msgstr "/选项(_O)"
 
 #: ../src/menu.c:125
 msgid "/Options/_Font..."
-msgstr "/选项(O)/字体(_F)..."
+msgstr "/选项/字体(_F)..."
 
 #: ../src/menu.c:127
 msgid "/Options/_Word Wrap"
-msgstr "/选项(O)/自动换行(_W)"
+msgstr "/选项/自动换行(_W)"
 
 #: ../src/menu.c:129
 msgid "/Options/_Line Numbers"
-msgstr "/选项(O)/行号(_L)"
+msgstr "/选项/显示行号(_L)"
 
 #: ../src/menu.c:133
 msgid "/Options/_Auto Indent"
-msgstr "/选项(O)/自动缩进(_A)"
+msgstr "/选项/自动缩进(_A)"
 
 #: ../src/menu.c:135
 msgid "/_Help"
@@ -171,7 +171,7 @@ msgstr "/帮助(_H)"
 
 #: ../src/menu.c:137
 msgid "/Help/_About"
-msgstr "/帮助(H)/关于(_A)"
+msgstr "/帮助/关于(_A)"
 
 #: ../src/search.c:73
 msgid "Search string not found"
@@ -193,7 +193,7 @@ msgstr "查找"
 #: ../src/search.c:200
 #: ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "查找(_N)："
+msgstr "找什么(_N)："
 
 #: ../src/search.c:219
 #: ../src/search.c:292
@@ -206,7 +206,7 @@ msgstr "替换"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "替换为(_A)："
+msgstr "替换为(_P)："
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
@@ -261,7 +261,7 @@ msgstr "字符编码(_A)："
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "文件“%s”已经存在。覆盖它吗？"
+msgstr "文件“%s”已经存在，要覆盖吗？"
 
 #. add the label with the root warning
 #: ../src/window.c:110
