--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-22  Mike Massonnet <mmassonnet@xfce.org>
+
+	* sl.po: Add Slovenian translation (Alan Pepelko)
+
 2009-02-20  Maximilian Schleiss <maximilian@xfce.org>
 
 	* gl.po: Galician translation update (Leandro Regueiro)
