--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
-2009-02-22  Mike Massonnet <mmassonnet@xfce.org>
+2009-02-22	Jannis Pohlmann <jannis@xfce.org>
+
+	* == Released 0.2.14 ==
+	* *.po: Bump Project-Id-Version.
+
+2009-02-22	Mike Massonnet <mmassonnet@xfce.org>
 
 	* sl.po: Add Slovenian translation (Alan Pepelko)
 
