--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-26	Jannis Pohlmann <jannis@xfce.org>
+
+	* == Released 0.2.16 ==
+	* *.po: Bump Project-Id-Version.
+
 2009-02-22  Mike Massonnet <mmassonnet@xfce.org>
 
 	* sl.po: Add Slovenian translation (Alan Pepelko)
