--- a/po/tl_PH.po
+++ b/po/tl_PH.po
@@ -1,281 +1,274 @@
-# Galician translation of mousepad
-# Copyright (C) 2006, 2008, 2009 Leandro Regueiro
-# This file is distributed under the same license as the xfce package.
-#
-# Leandro Regueiro <leandro.regueiro@gmail.com>, 2006, 2008, 2009.
-#
-# Proxecto Trasno - Adaptación do software libre á lingua galega:  Se desexas
-# colaborar connosco, podes atopar máis información en <http://trasno.net>
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad 0.2.16\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2009-04-19 01:20+0100\n"
-"Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
-"Language-Team: Galician <proxecto@trasno.net>\n"
+"PO-Revision-Date: 2009-04-20 14:08+0200\n"
+"Last-Translator: ian \"dakbyani\" besina <brod_bee@yahoo.com.ph>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Desexa gardar os cambios en '%s'?"
+msgstr "I-save ang mga pagbabago sa '%s'?"
 
 #: ../src/callback.c:213
 #: ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "Non se puido converter a codificación de caracteres a '%s'"
+msgstr "Hindi mai-convert ang codeset sa '%s'"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
-msgstr ""
+msgstr "Hindi mabuksan ang pipe upang prosesuhin"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
-msgstr "Un editor de texto para Xfce"
+msgstr "Isang editor ng teksto para sa Xfce"
 
 #: ../src/dialog.c:135
 #, c-format
 msgid "About %s"
-msgstr "Acerca de %s"
+msgstr "Tungkol sa %s"
 
 #: ../src/file.c:187
 msgid "Can't open file to write"
-msgstr "Non se puido abrir o ficheiro para escribir"
+msgstr "Hindi mabuksan ang file upang sulatan"
 
 #: ../src/file.c:192
 msgid "Can't write file"
-msgstr "Non se puido escribir o ficheiro"
+msgstr "Hindi masulatan ang file"
 
 #: ../src/font.c:49
 msgid "Font"
-msgstr "Tipo de letra"
+msgstr "Font"
 
 #: ../src/menu.c:61
 msgid "/_File"
-msgstr "/_Ficheiro"
+msgstr "/_File"
 
 #: ../src/menu.c:63
 msgid "/File/_New"
-msgstr "/Ficheiro/_Novo"
+msgstr "/File/_Bago"
 
 #: ../src/menu.c:66
 msgid "/File/New _Window"
-msgstr "/Ficheiro/Nova _ventá"
+msgstr "/File/Bago _Window"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
-msgstr "/Ficheiro/_Abrir..."
+msgstr "/File/_Bukas..."
 
 #: ../src/menu.c:72
 msgid "/File/Open _Recent"
-msgstr "/Ficheiro/Abrir _recente"
+msgstr "/File/Bukas _Pangkasalukuyan"
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
-msgstr "/Ficheiro/_Gardar"
+msgstr "/File/_Save"
 
 #: ../src/menu.c:79
 msgid "/File/Save _As..."
-msgstr "/Fiicheiro/Gardar _coma..."
+msgstr "/File/Save _Bilang..."
 
 #: ../src/menu.c:83
 msgid "/File/_Print..."
-msgstr "/Ficheiro/Im_primir..."
+msgstr "/File/_Print..."
 
 #: ../src/menu.c:87
 msgid "/File/_Quit"
-msgstr "/Ficheiro/_Saír"
+msgstr "/File/_Quit"
 
 #: ../src/menu.c:89
 msgid "/_Edit"
-msgstr "/_Editar"
+msgstr "/_Edit"
 
 #: ../src/menu.c:91
 msgid "/Edit/_Undo"
-msgstr "/Editar/_Desfacer"
+msgstr "/Edit/_Ibalik"
 
 #: ../src/menu.c:93
 msgid "/Edit/_Redo"
-msgstr "/Editar/_Refacer"
+msgstr "/Edit/_Ulitin"
 
 #: ../src/menu.c:97
 msgid "/Edit/Cu_t"
-msgstr "/Editar/Cor_tar"
+msgstr "/Edit/Cu_t"
 
 #: ../src/menu.c:99
 msgid "/Edit/_Copy"
-msgstr "/Editar/_Copiar"
+msgstr "/Edit/_Kopyahin"
 
 #: ../src/menu.c:101
 msgid "/Edit/_Paste"
-msgstr "/Editar/_Pegar"
+msgstr "/Edit/_Idikit"
 
 #: ../src/menu.c:103
 msgid "/Edit/_Delete"
-msgstr "/Editar/_Eliminar"
+msgstr "/Edit/_Alisin"
 
 #: ../src/menu.c:107
 msgid "/Edit/Select _All"
-msgstr "/Editar/Seleccionar _todo"
+msgstr "/Edit/Piliin _Lahat"
 
 #: ../src/menu.c:109
 msgid "/_Search"
-msgstr "/_Buscar"
+msgstr "/_Halughog"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/Buscar/_Buscar..."
+msgstr "/Halughog/_Hanapin..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/Buscar/Buscar _seguinte"
+msgstr "/Halughog/Hanapin _Susunod"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/Buscar/Buscar _anterior"
+msgstr "/Halughog/Hanapin _Nakaraan"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
-msgstr "/Buscar/_Substituír..."
+msgstr "/Halughog/_Palitan..."
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
-msgstr "/Buscar/Ir á _liña..."
+msgstr "/Halughog/_Lumaktaw Sa..."
 
 #: ../src/menu.c:123
 msgid "/_Options"
-msgstr "/_Opcións"
+msgstr "/_Options"
 
 #: ../src/menu.c:125
 msgid "/Options/_Font..."
-msgstr "/Opcións/_Tipo de letra..."
+msgstr "/Options/_Font..."
 
 #: ../src/menu.c:127
 msgid "/Options/_Word Wrap"
-msgstr "/Opcións/_Axuste de palabra"
+msgstr "/Options/_Word Wrap"
 
 #: ../src/menu.c:129
 msgid "/Options/_Line Numbers"
-msgstr "/Opcións/_Números de liña"
+msgstr "/Options/_Line Numbers"
 
 #: ../src/menu.c:133
 msgid "/Options/_Auto Indent"
-msgstr "/Opcións/_Sangría automática"
+msgstr "/Options/_Auto Indent"
 
 #: ../src/menu.c:135
 msgid "/_Help"
-msgstr "/A_xuda"
+msgstr "/_Tulong"
 
 #: ../src/menu.c:137
 msgid "/Help/_About"
-msgstr "/Axuda/_Acerca de"
+msgstr "/Tulong/_Patungkol"
 
 #: ../src/search.c:73
 msgid "Search string not found"
-msgstr "Non se atopou a cadea de busca"
+msgstr "Hindi mahanap ang search string"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "Substituír?"
+msgstr "Palitan?"
 
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "substituíronse %d cadeas"
+msgstr "%d na string ang pinalitan"
 
 #: ../src/search.c:188
 msgid "Find"
-msgstr "Buscar"
+msgstr "Hanapin"
 
 #: ../src/search.c:200
 #: ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "_Buscar: "
+msgstr "Fi_nd ang ano: "
 
-# "coincidencia exacta"
-# ou usar capitalización?
 #: ../src/search.c:219
 #: ../src/search.c:292
 msgid "_Match case"
-msgstr "_Diferenciar maiúsculas de minúsculas"
+msgstr "_Itugma case"
 
 #: ../src/search.c:253
 msgid "Replace"
-msgstr "Substituír"
+msgstr "Palitan"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "_Substituír con: "
+msgstr "Re_place ng: "
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
-msgstr "Substituír _todo dunha vez"
+msgstr "Palitan _lahat sa iisang pasada"
 
 #: ../src/search.c:342
 msgid "Jump To"
-msgstr "Ir á liña"
+msgstr "Lumaktaw sa"
 
 #: ../src/search.c:347
 msgid "_Jump"
-msgstr "Ir á _liña"
+msgstr "_Lumaktaw"
 
 #: ../src/search.c:353
 msgid "_Line number: "
-msgstr "Número de _liña: "
+msgstr "_Line number: "
 
 #: ../src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "Configuración rexional actual (%s)"
+msgstr "Kasalukuyang Lokal (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
-msgstr "Outra codificación de caracteres"
+msgstr "Ibang Codeset"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr "Codificación de caractere_s:"
+msgstr "Code_set:"
 
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "'%s' non está soportado"
+msgstr "'%s' ay hindi suportado"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
-msgstr "Detectar automaticamente"
+msgstr "Auto Detect"
 
 #: ../src/selector.c:325
 msgid "Open"
-msgstr "Abrir"
+msgstr "Buksan"
 
 #: ../src/selector.c:325
 msgid "Save As"
-msgstr "Gardar Coma"
+msgstr "I-save Bilang"
 
 #: ../src/selector.c:347
 msgid "Ch_aracter Coding: "
-msgstr "Codificación de c_aracteres:"
+msgstr "Ch_aracter Coding: "
 
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "'%s' xa existe. Desexa sobrescribilo?"
+msgstr "Mayroon nang '%s'. Patungan na lang?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr "Advertencia, está usando a conta de root, podería danar o sistema."
+msgstr "Paalala, ikaw ay gumagamit ng root account, maari kang makapinsala sa sistema."
 
 #: ../src/window.c:169
 msgid "Untitled"
-msgstr "Sen nome"
+msgstr "Walang Pamagat"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
@@ -283,9 +276,9 @@ msgstr "Mousepad"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
-msgstr "Editor de texto sinxelo"
+msgstr "Simpleng editor ng teksto"
 
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
-msgstr "Editor de Texto"
+msgstr "Editor ng Teksto"
 
