--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-11  Mike Massonnet <mmassonnet@xfce.org>
+
+	* lv.po: Latvian translation update (Rihards Prieditis)
+
 2009-04-20  Mișu Moldovan  <dumol@xfce.org>
 
 	* LINGUAS: Added "ro" for Romanian
