--- a/po/ro.po
+++ b/po/ro.po
@@ -2,7 +2,7 @@
 # Traducerea în limba română pentru pachetul Mousepad.
 # Copyright (C) 2007 THE Mousepad's COPYRIGHT HOLDER
 # This file is distributed under the same license as the Mousepad package.
-# Mișu Moldovan <dumol@gnome.ro>, 2007-2009
+# Mișu Moldovan <dumol@xfce.org>, 2007-2009
 #
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-21 00:03+0300\n"
 "PO-Revision-Date: 2009-04-21 00:00+0300\n"
-"Last-Translator: Mișu Moldovan <dumol@gnome.ro>\n"
+"Last-Translator: Mișu Moldovan <dumol@xfce.org>\n"
 "Language-Team: Romanian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
