--- a/po/vi.po
+++ b/po/vi.po
@@ -1,287 +1,283 @@
-# Simplified Chinese translation for MousePad.
-# Copyright (C) 2005-2006 Erik Harrison.
-# This file is distributed under the same license as the Mousepad package.
-# Carlos Z.F. Liu <carlos_liu@yahoo.com>, 2004.
-# Jick Nan <jick.nan@gmail.com>, 2006.
-# Hunt Xu <huntxu@live.cn>,2008.
-# Chris K. Zhang <plutino@gmail.com>, 2009.
-# Aron Xu <aronmalache@163.com>, 2009.
+# Vietnamese translations for i package.
+# Copyright (C) 2009 THE i'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the i package.
+# Automatically generated, 2009.
+# Nguyễn Quốc Vinh [kureikain] , <kureikain@gmail.com>, 2009
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad 0.2.16\n"
+"Project-Id-Version: mousepad\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2009-06-14 02:20+0800\n"
-"Last-Translator: Aron Xu <aronmalache@163.com>\n"
-"Language-Team: Simplified Chinese <xfce-i18n@xfce.org>\n"
+"PO-Revision-Date: 2009-06-15 13:40+0200\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "将更改保存到“%s”吗？"
+msgstr "Lưu thay đổi đến '%s'?"
 
-#: ../src/callback.c:213
-#: ../src/file.c:174
+#: ../src/callback.c:213 ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "无法将编码转换到“%s”"
+msgstr "Không thể chuyển đổi Codeset thành'%s'"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
-msgstr "无法打开处理管道"
+msgstr "Không thể xử lí"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
-msgstr "Xfce 文本编辑器"
+msgstr "Trình soạn thảo dành cho Xfce"
 
 #: ../src/dialog.c:135
 #, c-format
 msgid "About %s"
-msgstr "关于 %s"
+msgstr "Giới thiệu %s"
 
 #: ../src/file.c:187
 msgid "Can't open file to write"
-msgstr "无法打开要写入的文件"
+msgstr "Lỗi không thể mở file để ghi"
 
 #: ../src/file.c:192
 msgid "Can't write file"
-msgstr "无法写入文件"
+msgstr "Không thể ghi dữ liệu"
 
 #: ../src/font.c:49
 msgid "Font"
-msgstr "字体"
+msgstr "Font"
 
 #: ../src/menu.c:61
 msgid "/_File"
-msgstr "/文件(_F)"
+msgstr ""
 
 #: ../src/menu.c:63
 msgid "/File/_New"
-msgstr "/文件/新建(_N)"
+msgstr "Tạo mới"
 
 #: ../src/menu.c:66
 msgid "/File/New _Window"
-msgstr "/文件/新开窗口(_W)"
+msgstr "Cửa sổ mới"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
-msgstr "/文件/打开(_O)..."
+msgstr "Mở File"
 
 #: ../src/menu.c:72
 msgid "/File/Open _Recent"
-msgstr "/文件/打开最近使用的文档(_R)"
+msgstr "File mở gần đây"
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
-msgstr "/文件/保存(_S)"
+msgstr "Lưu lại"
 
 #: ../src/menu.c:79
 msgid "/File/Save _As..."
-msgstr "/文件/另存为(_A)..."
+msgstr "Lưu thành..."
 
 #: ../src/menu.c:83
 msgid "/File/_Print..."
-msgstr "/文件/打印(_P)..."
+msgstr "In ra..."
 
 #: ../src/menu.c:87
 msgid "/File/_Quit"
-msgstr "/文件/退出(_Q)"
+msgstr "Thoát"
 
 #: ../src/menu.c:89
 msgid "/_Edit"
-msgstr "/编辑(_E)"
+msgstr "Biên tập"
 
 #: ../src/menu.c:91
 msgid "/Edit/_Undo"
-msgstr "/编辑/撤销(_U)"
+msgstr ""
 
 #: ../src/menu.c:93
 msgid "/Edit/_Redo"
-msgstr "/编辑/重做(_R)"
+msgstr ""
 
 #: ../src/menu.c:97
 msgid "/Edit/Cu_t"
-msgstr "/编辑/剪切(_T)"
+msgstr "Cắt"
 
 #: ../src/menu.c:99
 msgid "/Edit/_Copy"
-msgstr "/编辑/复制(_C)"
+msgstr "Sao chép"
 
 #: ../src/menu.c:101
 msgid "/Edit/_Paste"
-msgstr "/编辑/粘贴(_P)"
+msgstr "Dán"
 
 #: ../src/menu.c:103
 msgid "/Edit/_Delete"
-msgstr "/编辑/删除(_D)"
+msgstr "Xóa"
 
 #: ../src/menu.c:107
 msgid "/Edit/Select _All"
-msgstr "/编辑/全选(_A)"
+msgstr "Chọn hết"
 
 #: ../src/menu.c:109
 msgid "/_Search"
-msgstr "/搜索(_S)"
+msgstr "Tìm kiếm"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/搜索/查找(_F)..."
+msgstr "Tìm"
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/搜索/查找下一个(_N)"
+msgstr "Tìm Tiếp"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/搜索/查找上一个(_P)"
+msgstr "Trước"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
-msgstr "/搜索/替换(_R)..."
+msgstr "Thay thế"
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
-msgstr "/搜索/跳转到(_J)..."
+msgstr "Nhảy đến"
 
 #: ../src/menu.c:123
 msgid "/_Options"
-msgstr "/选项(_O)"
+msgstr "Tùy chọn"
 
 #: ../src/menu.c:125
 msgid "/Options/_Font..."
-msgstr "/选项/字体(_F)..."
+msgstr ""
 
 #: ../src/menu.c:127
 msgid "/Options/_Word Wrap"
-msgstr "/选项/自动换行(_W)"
+msgstr ""
 
 #: ../src/menu.c:129
 msgid "/Options/_Line Numbers"
-msgstr "/选项/显示行号(_L)"
+msgstr "Số dòng"
 
 #: ../src/menu.c:133
 msgid "/Options/_Auto Indent"
-msgstr "/选项/自动缩进(_A)"
+msgstr "Tự động thụt vào"
 
 #: ../src/menu.c:135
 msgid "/_Help"
-msgstr "/帮助(_H)"
+msgstr "Trợ giúp"
 
 #: ../src/menu.c:137
 msgid "/Help/_About"
-msgstr "/帮助/关于(_A)"
+msgstr "Giới thiệu"
 
 #: ../src/search.c:73
 msgid "Search string not found"
-msgstr "找不到搜索字串"
+msgstr "Không tìm thấy"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "替换吗？"
+msgstr "Thay thế?"
 
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "替换了 %d 个字符串"
+msgstr "%d chuỗi được thay thế"
 
 #: ../src/search.c:188
 msgid "Find"
-msgstr "查找"
+msgstr "Tìm kiếm"
 
-#: ../src/search.c:200
-#: ../src/search.c:265
+#: ../src/search.c:200 ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "查找什么(_N)："
+msgstr "Nội dung tìm"
 
-#: ../src/search.c:219
-#: ../src/search.c:292
+#: ../src/search.c:219 ../src/search.c:292
 msgid "_Match case"
-msgstr "区分大小写(_M)"
+msgstr "Khớp với nội dung tìm"
 
 #: ../src/search.c:253
 msgid "Replace"
-msgstr "替换"
+msgstr "Thay thế"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "替换为(_P)："
+msgstr "Thay bằng:"
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
-msgstr "全部替换(_A)"
+msgstr "Thay thế tất cả"
 
 #: ../src/search.c:342
 msgid "Jump To"
-msgstr "跳转至"
+msgstr "Nhảy đến"
 
 #: ../src/search.c:347
 msgid "_Jump"
-msgstr "跳转(_J)"
+msgstr "Nhảy"
 
 #: ../src/search.c:353
 msgid "_Line number: "
-msgstr "行号(_L)："
+msgstr "Dòng số"
 
 #: ../src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "当前区域 (%s)"
+msgstr ""
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
-msgstr "其它编码"
+msgstr "Codeset khác"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr "编码(_S)："
+msgstr ""
 
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "“%s”不被支持"
+msgstr "'%s' không được hỗ trợ"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
-msgstr "自动检测"
+msgstr "Tự động kiểm tra"
 
 #: ../src/selector.c:325
 msgid "Open"
-msgstr "打开"
+msgstr "Mở"
 
 #: ../src/selector.c:325
 msgid "Save As"
-msgstr "另存为"
+msgstr "Lưu lại như..."
 
 #: ../src/selector.c:347
 msgid "Ch_aracter Coding: "
-msgstr "字符编码(_A)："
+msgstr ""
 
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "文件“%s”已经存在，要覆盖吗？"
+msgstr "'%s' đã tồn tại. Bạn muốn ghi đè ?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr "警告：您正在使用root账户，操作不当可能损害您的系统。"
+msgstr ""
+"Chú ý, bạn đang sử dụng tài khoảng người dùng gốc, có thể ảnh hưởng đến hệ "
+"thống"
 
 #: ../src/window.c:169
 msgid "Untitled"
-msgstr "无标题"
+msgstr "Không tiêu đề"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
-msgstr "Mousepad"
+msgstr ""
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
-msgstr "简易文字编辑器"
+msgstr "Trình soạn thảo đơn giản"
 
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
-msgstr "文字编辑器"
-
+msgstr "Trình soạn thảo"
