--- a/po/hu.po
+++ b/po/hu.po
@@ -1,44 +1,41 @@
-# Hungarian translation of Mousepad.
-# Copyright (C) 2005-2006 Erik Harrison.
-# This file is distributed under the same license as the Mousepad package.
+# Hungarian translation of mousepad
 # SZERVÁC Attila <sas@321.hu>, 2005.
-#   based on Leafpad translation by
-#   Reviczky Ádám János <reviczky@freemail.hu>, 2004.
+# Reviczky Ádám János <reviczky@freemail.hu>, 2004.
 # Andras Mohari <mayday@mailpont.hu>, 2006.
-#
+# Gabor Kelemen <kelemeng at gnome dot hu>, 2009.
+# Copyright 2009. Free Software Foundation, Inc.
+# This file is distributed under the same license as the mousepad package.
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad 0.2.16\n"
+"Project-Id-Version: mousepad\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2009-05-26 07:22+0100\n"
-"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
-"Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
+"POT-Creation-Date: 2009-07-21 01:28+0200\n"
+"PO-Revision-Date: 2009-07-21 02:35+0200\n"
+"Last-Translator: Gabor Kelemen <kelemeng at gnome dot hu>\n"
+"Language-Team: Hungarian <gnome at gnome dot hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Poedit-Language: Hungarian\n"
-"X-Poedit-Country: HUNGARY\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Mented \"%s\" változásait?"
+msgstr "Menti a módosításokat ebbe: „%s”?"
 
-#: ../src/callback.c:213
-#: ../src/file.c:174
+#: ../src/callback.c:213 ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "A kódolás nem alakítható át erre: \"%s\""
+msgstr "A kódlap nem alakítható át erre: „%s”"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
-msgstr "Nem nyitható cső a folyamathoz"
+msgstr "Nem nyitható adatcsatorna a folyamathoz"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
-msgstr "Egyszerű szövegszerkesztő Xfce-hez"
+msgstr "Szövegszerkesztő az Xfce-hez"
 
 #: ../src/dialog.c:135
 #, c-format
@@ -47,15 +44,15 @@ msgstr "%s névjegye"
 
 #: ../src/file.c:187
 msgid "Can't open file to write"
-msgstr "Nem nyitható meg írásra a fájl"
+msgstr "Nem nyitható meg a fájl írásra"
 
 #: ../src/file.c:192
 msgid "Can't write file"
-msgstr "Nem írható a fájl"
+msgstr "A fájl nem írható"
 
 #: ../src/font.c:49
 msgid "Font"
-msgstr "Betűtípus"
+msgstr "Betűkészlet"
 
 #: ../src/menu.c:61
 msgid "/_File"
@@ -71,7 +68,7 @@ msgstr "/Fájl/Új _ablak"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
-msgstr "/Fájl/_Megnyitás"
+msgstr "/Fájl/_Megnyitás..."
 
 #: ../src/menu.c:72
 msgid "/File/Open _Recent"
@@ -79,11 +76,11 @@ msgstr "/Fájl/_Legutóbbi megnyitása"
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
-msgstr "/Fájl/Menté_s"
+msgstr "/Fájl/M_entés"
 
 #: ../src/menu.c:79
 msgid "/File/Save _As..."
-msgstr "/Fájl/Men_tés mint..."
+msgstr "/Fájl/Me_ntés másként..."
 
 #: ../src/menu.c:83
 msgid "/File/_Print..."
@@ -95,7 +92,7 @@ msgstr "/Fájl/_Kilépés"
 
 #: ../src/menu.c:89
 msgid "/_Edit"
-msgstr "S_zerkesztés"
+msgstr "/S_zerkesztés"
 
 #: ../src/menu.c:91
 msgid "/Edit/_Undo"
@@ -107,7 +104,7 @@ msgstr "/Szerkesztés/Új_ra"
 
 #: ../src/menu.c:97
 msgid "/Edit/Cu_t"
-msgstr "/Szerkesztés/_Kivágás"
+msgstr "/Szerkesztés/Ki_vágás"
 
 #: ../src/menu.c:99
 msgid "/Edit/_Copy"
@@ -123,7 +120,7 @@ msgstr "/Szerkesztés/_Törlés"
 
 #: ../src/menu.c:107
 msgid "/Edit/Select _All"
-msgstr "/Szerkesztés/Min_dent kijelöl"
+msgstr "/Szerkesztés/Min_det kijelöli"
 
 #: ../src/menu.c:109
 msgid "/_Search"
@@ -135,11 +132,11 @@ msgstr "/Keresés/_Keresés..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/Keresés/Kö_vetkező találat"
+msgstr "/Keresés/Kö_vetkező keresése"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/Keresés/_Előző találat"
+msgstr "/Keresés/_Előző keresése"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
@@ -155,19 +152,19 @@ msgstr "/_Beállítások"
 
 #: ../src/menu.c:125
 msgid "/Options/_Font..."
-msgstr "/Beállítások/_Betűtípus..."
+msgstr "/Beállítások/_Betűkészlet..."
 
 #: ../src/menu.c:127
 msgid "/Options/_Word Wrap"
-msgstr "/Beállítások/Sorok _tördelése"
+msgstr "/Beállítások/S_ortörés"
 
 #: ../src/menu.c:129
 msgid "/Options/_Line Numbers"
-msgstr "/Beállítások/Sorok _számozása"
+msgstr "/Beállítások/Sors_zámok"
 
 #: ../src/menu.c:133
 msgid "/Options/_Auto Indent"
-msgstr "/Beállítások/_Automatikus behúzás"
+msgstr "/Beállítások/A_utomatikus behúzás"
 
 #: ../src/menu.c:135
 msgid "/_Help"
@@ -179,30 +176,28 @@ msgstr "/Súgó/_Névjegy"
 
 #: ../src/search.c:73
 msgid "Search string not found"
-msgstr "A keresett szöveg nem található"
+msgstr "A keresőkifejezés nem található"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "Cseréled?"
+msgstr "Cseréli?"
 
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "%d csere volt"
+msgstr "%d karakterlánc cserélve"
 
 #: ../src/search.c:188
 msgid "Find"
 msgstr "Keresés"
 
-#: ../src/search.c:200
-#: ../src/search.c:265
+#: ../src/search.c:200 ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "Kerese_ndő: "
+msgstr "Keresen_dő: "
 
-#: ../src/search.c:219
-#: ../src/search.c:292
+#: ../src/search.c:219 ../src/search.c:292
 msgid "_Match case"
-msgstr "_Nagybetű érzékeny"
+msgstr "Kis- és _nagybetű"
 
 #: ../src/search.c:253
 msgid "Replace"
@@ -210,11 +205,11 @@ msgstr "Csere"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "C_sere erre: "
+msgstr "_Csere ezzel: "
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
-msgstr "Mindent cserél _egyszerre"
+msgstr "Összes cs_eréje"
 
 #: ../src/search.c:342
 msgid "Jump To"
@@ -226,26 +221,25 @@ msgstr "_Ugrás"
 
 #: ../src/search.c:353
 msgid "_Line number: "
-msgstr "S_or száma: "
+msgstr "S_orszám: "
 
-# XXX [mayday]: Miért locale, ha valójában encoding/codeset?
 #: ../src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "Jelenlegi kódolás (%s)"
+msgstr "A jelenlegi locale (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
-msgstr "Más kódolás"
+msgstr "Más kódlap"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr "Kódolá_s:"
+msgstr "Kó_dlap:"
 
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "\"%s\" nem támogatott"
+msgstr "„%s” nem támogatott"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
@@ -261,17 +255,17 @@ msgstr "Mentés másként"
 
 #: ../src/selector.c:347
 msgid "Ch_aracter Coding: "
-msgstr "K_arakterkódolás: "
+msgstr "_Karakterkódolás: "
 
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "\"%s\" már létezik. Felülírod?"
+msgstr "„%s” már létezik. Felülírja?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr "Figyelem, root hozzáférést használsz, árthatsz a rendszernek."
+msgstr "Figyelem, a root fiókot használja, így árthat is a rendszerének."
 
 #: ../src/window.c:169
 msgid "Untitled"
