--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Erik Harrison <erikharrison@xfce.org>
 Nick Schermer <nick@xfce.org>
 Benedikt Meurer <benny@xfce.org>
+Matthew Brush <matt@xfce.org>
