Remove docs and cleanup a bit.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,9 @@ Erik Harrison <erikharrison@xfce.org>
 Nick Schermer <nick@xfce.org>
 Benedikt Meurer <benny@xfce.org>
 Matthew Brush <matt@xfce.org>
+
+Authors of the 0.2 and earlier releases
+=======================================
+Erik Harrison <erikharrison@xfce.org>
+Benedikt Meurer <benny@xfce.org>
+Tarot Osuji <tarot@sdf.lonestar.org>
