--- a/README
+++ b/README
@@ -42,5 +42,5 @@ How to report bugs?
 ===================
 
 Bugs should be reported to the Xfce bug tracking system
-(http://bugzilla.xfce.org, product Mousepad). You will need to create
+(https://bugzilla.xfce.org, product Mousepad). You will need to create
 an account for yourself.
